fix: success modal redirects, white spaces on descriptions

--- a/src/containers/artist/Artist.scss
+++ b/src/containers/artist/Artist.scss
@@ -155,6 +155,7 @@
           line-height: 160%;
           color: rgba(0, 0, 0, 0.6);
           margin: 10px 0 24px;
+          white-space: pre-wrap;
           @include lg {
             font-size: 14px;
           }
