--- a/src/containers/collection/Collection.scss
+++ b/src/containers/collection/Collection.scss
@@ -64,6 +64,7 @@
       margin-top: 170px;
       margin-left: auto;
       margin-right: auto;
+      white-space: pre-wrap;
       @include sm{
         margin-top: 35px;
       }
